--- a/css/styles.css
+++ b/css/styles.css
@@ -359,6 +359,7 @@ body {
     color: #94a3b8;
     transition: all 0.3s ease;
     text-decoration: none !important;
+    border-bottom: none !important;
     position: relative;
     display: inline-block;
     padding-bottom: 3px;
@@ -369,7 +370,6 @@ body {
     position: absolute;
     bottom: 0;
     left: 0;
-    right: 0;
     width: 0;
     height: 2px;
     background-color: #F86825;
