--- a/scripts/templates/qa-post-template.html
+++ b/scripts/templates/qa-post-template.html
@@ -26,7 +26,7 @@
     <link id="canonical-url" rel="canonical" href="https://blog.pebblous.ai/project/AADS/{{ metadata.domain_en }}-qa-dataset.html">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="/css/common-styles.css">
+    <link rel="stylesheet" href="/styles/common-styles.css?v=20260107">
     <link rel="stylesheet" href="/css/styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
 
